Fixed Edge textarea wrap/scroll issues

--- a/src/WebComponents/Attributes/PersistentObjectAttributeMultiLineString/persistent-object-attribute-multi-line-string.scss
+++ b/src/WebComponents/Attributes/PersistentObjectAttributeMultiLineString/persistent-object-attribute-multi-line-string.scss
@@ -6,6 +6,8 @@
 
     textarea {
         resize: none;
+        white-space: pre-wrap;
+        -ms-overflow-style: -ms-autohiding-scrollbar;
     }
 
     pre, textarea {
